# thinking-company

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.specify/memory/: constitution.md
docs/: cli-style-guide.md  installation.md  security-audit.md
docs/metrics/: onboarding.md
restack_gen/: __init__.py
restack_gen/cli/: __init__.py  main.py
restack_gen/cli/commands/: doctor.py  generate.py  migrate.py  new.py  server.py
restack_gen/generators/: agent.py  base.py  function.py  llm.py  pipeline.py  project.py  workflow.py
restack_gen/migrations/: __init__.py  manager.py
restack_gen/models/: __init__.py  config.py  migration.py  project.py
restack_gen/templates/agents/: agent.py.j2  test_agent.py.j2
restack_gen/templates/functions/: function.py.j2  test_function.py.j2
restack_gen/templates/llm/: fastmcp_server.py.j2  llm_integration.py.j2
restack_gen/templates/llm/prompts/: prompt_v1.txt.j2
restack_gen/templates/llm/providers/: anthropic.py.j2  base.py.j2  gemini.py.j2  openai.py.j2
restack_gen/templates/pipelines/: pipeline.py.j2
restack_gen/templates/pipelines/examples/: optional.txt  parallel.txt  sequence.txt
restack_gen/templates/project/: .gitignore.j2  README.md.j2  pyproject.toml.j2  requirements.txt.j2  restack.toml.j2
restack_gen/templates/project/.github/workflows/: ci.yml.j2
restack_gen/templates/project/structure/tests/: test_sample.py.j2
restack_gen/templates/workflows/: test_workflow.py.j2  workflow.py.j2
restack_gen/utils/: file_ops.py  logging.py  validation.py
specs/001-restack-gen-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-restack-gen-cli/checklists/: requirements.md
specs/001-restack-gen-cli/contracts/: cli-commands.md  fastmcp-integration.md  llm-provider-interface.md  pipeline-operator-grammar.md  template-system.md
tests/: conftest.py
tests/integration/: test_cli_doctor.py  test_cli_generate.py  test_cli_new.py  test_fastmcp.py  test_llm_generation.py  test_migrate.py  test_pipeline_generation.py  test_server.py
tests/unit/: test_config_models.py  test_file_ops.py  test_project_generator_errors.py  test_validation.py
