[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restack-gen"
version = "0.1.0"
description = "Convention-over-configuration CLI for scaffolding Restack agents, workflows, and functions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Thinking Company", email = "dev@thinking.company"}
]
keywords = ["restack", "cli", "scaffolding", "code-generation", "agents", "workflows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1.0,<9.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "restack-ai>=0.1.0",
    "google-generativeai>=0.3.0",
    "fastmcp>=2.0.0,<3.0.0",
    "toml>=0.10.0",
    "rich>=13.0.0",  # For colored terminal output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]

[project.scripts]
restack = "restack_gen.cli.main:cli"

[project.urls]
Homepage = "https://github.com/thinking-company/restack-gen"
Documentation = "https://github.com/thinking-company/restack-gen#readme"
Repository = "https://github.com/thinking-company/restack-gen"
Issues = "https://github.com/thinking-company/restack-gen/issues"

[tool.setuptools]
packages = ["restack_gen"]

[tool.setuptools.package-data]
restack_gen = ["templates/**/*", "templates/**/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=restack_gen",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/conftest.py" = ["W293"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "restack.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.generativeai"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
